# resonance_excitable_media

./: README.md  main.py  pyproject.toml
data/poster/: correlated_anisotropic_coherence_metrics.csv  correlated_isotropic_coherence_metrics.csv  white_anisotropic_coherence_metrics.csv  white_isotropic_coherence_metrics.csv
docs/default_param/: default_param_anisotropic.json  default_param_correlated_noise.json  default_param_correlated_noise_anisotropic.json  default_param_correlated_noise_isotropic.json  default_param_isotropic.json  default_param_simulation_constant.json  default_param_white_noise.json  default_param_white_noise_anisotropic.json  default_param_white_noise_isotropic.json
docs/param_schema/: batch_param.schema.json  correlated_noise_anisotropic.schema.json  correlated_noise_isotropic.schema.json  diffusion_constant.schema.json  noise_generation.schema.json  simulation_constant.schema.json  white_noise_anisotropic.schema.json  white_noise_isotropic.schema.json
legacy/: spatial_coherence.m
src/: default_param.json  temporal_integration.py
src/app/: run_metric_app.py  run_single_app.py
src/helper/: animate.py  datatypes.py  diffusion_tensor_mask.py  fit_ellipse.py  helper_save.py  plot_3d.py  spatiotemporal_metrics.py  validate_param.py
src/prototype/: __init__.py  analyse_structure_function.py  prototype_datatypes.py  prototype_fit_ellipse.py  prototype_spatiotemporal_metrics.py
src/resonance_excitable_media/: create_noise.py  main.py  read_parameters.py  run_metric.py  run_single.py  temporal_integration.py
(+4 files in other folders)
