[project]
authors = [
{name = "Belinda Kusuma", email="belinda.kusuma@eng.ox.ac.uk"}
]

name = "resonance-excitable-media"
version = "0.1.0"
description = "Code for simulation of resonance in excitable media"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "typer>=0.24.1",
]

[project.scripts]
resonance = "src.resonance_excitable_media.main:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "src"